# cove-universal-converter

./: .gitignore  README.md  build.ps1  handoff.md  pyproject.toml  requirements.txt  run.sh
.github/: RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.0.1.md  RELEASE_NOTES_v2.0.2.md  RELEASE_NOTES_v2.0.3.md  RELEASE_NOTES_v2.0.4.md  RELEASE_NOTES_v2.0.5.md  RELEASE_NOTES_v2.0.6.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.1.1.md  RELEASE_NOTES_v2.1.2.md  RELEASE_NOTES_v2.1.3.md  RELEASE_NOTES_v2.1.8.md  RELEASE_NOTES_v2.3.0.md
.github/workflows/: release.yml
cove_converter/: __main__.py  binaries.py  portable.py  routing.py  settings.py  system_open.py  updater.py
cove_converter/engines/: __init__.py  archives.py  base.py  data.py  ffmpeg.py  hwaccel.py  pandoc.py  pdf.py  pdf_flatten.py  pillow.py  spreadsheets.py  subtitles.py
cove_converter/ui/: drop_zone.py  file_row.py  formats_dialog.py  (+3 more)
packaging/: cove-universal-converter.desktop  installer.iss  launcher.py
scripts/: build-release.sh  smoke_conversions.py
tests/: test_archives_limits.py  test_common_targets.py  test_data_yaml_json.py  test_failure_log_capture.py  test_hwaccel.py  test_image_to_pdf_readonly.py  test_mp4_to_webm_size.py  test_output_permissions.py  test_pdf_enhance.py  test_pdf_flatten.py  test_pdf_pandoc_html.py  test_quality_dialog_round_trip.py  test_routing_targz.py  test_smoke_matrix.py  test_stale_log_clearing.py  test_subtitles.py  test_temp_output_allocation.py  test_theme_tokens.py  test_updater_swap.py  test_worker_temp_writability.py  test_xlsx_to_csv.py
